--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
     </svg>
             </div>
             <div class="text">
-                <h1>happy birthday!</h1>
-                <h2>Noah</h2>
+                <h1>二十岁生日快乐!</h1>
+                <h2>张珩 harbor</h2>
             </div>
         </div>
         <div class="swiper-slide">
