--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
     });
 
     $(".popImage img").click(function (){ // 二维码点击也可以跳转
-        window.location.href="https://mh.cli.im/";  // TODO change
+        window.location.href="#";  // TODO change
     });
 
 </script>
