--- a/index.html
+++ b/index.html
@@ -281,6 +281,8 @@
             <div class="text">
                 <h1>二十岁生日快乐!</h1>
                 <h2>张珩 harbor</h2>
+		    <p>一寸一礼 一寸欢喜<p/>
+		    <p>永远二十赶朝暮 意气风发仍少年<p/>
             </div>
         </div>
         <div class="swiper-slide">
