--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 </div>
                 <div class="popImage">
                     <div class="blur"></div>
-                    <img src="./static/qr_code.png">
+                    <img src="./static/gift.jpg">
                 </div>
             </div>
         </div>
