--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
                 <div class="popImage">
                     <div class="blur"></div>
                     <img src="./static/gift.jpg">
+			<p>来自三一二的生日祝福<p/>
                 </div>
             </div>
         </div>
